[package]
name = "abut"
version = "0.1.1"
edition = "2024"

license = "MIT OR Apache-2.0"
description = "Structural IPC orchestration and boundary-aware Unix Domain Sockets. Manages the secure adjacency of isolated processes within the Honest-Classified security suite."

authors = ["James Hunt <jameshuntdevelopment@gmail.com>"]
repository = "https://github.com/jameshuntt/abut"

[dependencies]
